<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Simple Speech Timer</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_db">Delete Saved Data</string>
    <string name="action_read_db">Show Saved Data</string>
    <string name="action_rate_app">Rate App</string>
    <string name="action_hide_show">Hide</string>
    <string name="action_about">About</string>
    <string name="tableTopics">Table Topics (1 to 2 min)</string>
    <string name="iceBreaker">Ice Breaker (4 to 6 min)</string>
    <string name="speech">Speech (5 to 7 min)</string>
    <string name="tableTopicsZeroToOne">Table Topics (0 to 1 min)</string>
    <string name="speechEval">Evaluation (2 to 3 min)</string>
    <string name="customSpeech">Speech (custom time)</string>
    <string name="title_activity_timer_display">Timer</string>
    <string name="start_btn">Start</string>
    <string name="stop_btn_txt">Stop</string>
    <string name="pause_btn">Reset</string>
    <string name="save_btn">Save</string>
    <string name="title_activity_custom_speech">CustomSpeechActivity</string>
    <string name="go">OK</string>
    <string name="to">to</string>
    <string name="action_feedback">Send Feedback</string>
    <string name="chronometer">chronometer</string>
    <string name="choose_a_time_range_min">Please choose a time range (min):</string>
    <string name="settings_vibrate">Vibrate</string>
    <string name="settings_vibrate_summary">Vibrate when display changes color</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_sound_summary">Play sound when display changes color</string>
    <string name="settings_color">Background Alert Color</string>
    <string name="settings_color_summary">Use orange background instead of yellow</string>
    <string name="settings_theme">Dark Mode</string>
    <string name="settings_theme_summary">Enable dark mode</string>
    <string name="contact_developer_uri">happypuppydev@gmail.com</string>
    <string name="version">1.5.0</string>
    <string name="send_email_using">Send email using…</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_saved_data">"Delete all saved data?"</string>
    <string name="yes">"Yes"</string>
    <string name="no">"No"</string>
    <string name="saved_data_deleted">"Saved data deleted"</string>
    <string name="save_time">"Save Time"</string>
    <string name="enter_speaker_name">"Enter speaker's name"</string>
    <string name="nothing_to_save">"Nothing to save"</string>
    <string name="error_db">"Error writing to database. Please delete the data and try again"</string>
    <string name="saving_time">"Saving time: "</string>
    <string name="saved_data">"Saved Data"</string>
    <string name="no_data">"No Data"</string>
    <string name="share">"Share"</string>
    <string name="email_header">"Name | Speech Type | Time"</string>
    <string name="email_subject_tm_timer_report">"Toastmasters Timer Report"</string>
    <string name="share_via">"Share via"</string>

</resources>
