<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:defaultValue="true"
        android:key="pref_vibrate"
        android:summary="@string/settings_vibrate_summary"
        android:title="@string/settings_vibrate" />

    <CheckBoxPreference
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:defaultValue="true"
        android:key="pref_sound"
        android:summary="@string/settings_sound_summary"
        android:title="@string/settings_sound" />

    <CheckBoxPreference
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:defaultValue="false"
        android:key="pref_color"
        android:summary="@string/settings_color_summary"
        android:title="@string/settings_color" />


</PreferenceScreen>