<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TimerDisplayActivity"
    android:id="@+id/buttonLayout">

    <Button
        android:id="@+id/tableTopicsBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="launchTimerDisplay"
        android:text="@string/tableTopics" />

    <Button
        android:id="@+id/speechEvalBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="launchTimerDisplay"
        android:text="@string/speechEval" />

    <Button
        android:id="@+id/iceBreakerBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="launchTimerDisplay"
        android:text="@string/iceBreaker" />

    <Button
        android:id="@+id/speechBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="launchTimerDisplay"
        android:text="@string/speech" />

    <Button
        android:id="@+id/eightToTenBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="launchTimerDisplay"
        android:text="@string/eightToTen" />

    <Button
        android:id="@+id/customSpeechBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="launchCustomDisplay"
        android:text="@string/customSpeech" />

</LinearLayout>